--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
     "node-fetch": "^3.3.2",
     "xmlhttprequest": "^1.8.0"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "ts-node Patrones-creacionales/singleton/singleton.ts"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  }
 }
